language/move-lang/tests/move_check/typing/while_body_invalid.exp
error: 

   ┌── tests/move_check/typing/while_body_invalid.move:3:22 ───
   │
 3 │         while (cond) 0;
   │                      - The type: integer
   │                      - Is not compatible with: '()'
   │                      ^ Invalid loop body
   │

error: 

   ┌── tests/move_check/typing/while_body_invalid.move:4:22 ───
   │
 4 │         while (cond) false;
   │                      ----- The type: 'bool'
   │                      ----- Is not compatible with: '()'
   │                      ^^^^^ Invalid loop body
   │

error: 

   ┌── tests/move_check/typing/while_body_invalid.move:5:22 ───
   │
 5 │         while (cond) { 0x0 };
   │                      ------- Is not compatible with: '()'
   │                      ^^^^^^^ Invalid loop body
   │                        --- The type: 'address'
   │

error: 

   ┌── tests/move_check/typing/while_body_invalid.move:6:22 ───
   │
 6 │         while (cond) { let x = 0; x };
   │                      ---------------- Is not compatible with: '()'
   │                      ^^^^^^^^^^^^^^^^ Invalid loop body
   │                            - The type: integer
   │

error: 

   ┌── tests/move_check/typing/while_body_invalid.move:7:22 ───
   │
 7 │         while (cond) { if (cond) 1 else 0 };
   │                      ---------------------- Is not compatible with: '()'
   │                      ^^^^^^^^^^^^^^^^^^^^^^ Invalid loop body
   │                                         - The type: integer
   │

